--- a/package.json
+++ b/package.json
@@ -1,30 +1,14 @@
 {
-  "name": "prisma-generator-nestjs-dto",
+  "name": "@witstep/prisma-generator-nestjs-dto",
   "description": "Generates DTO and Entity classes from Prisma Schema for NestJS",
   "version": "1.1.3",
   "license": "Apache-2.0",
-  "author": {
-    "name": "Risser Labs LLC",
-    "email": "info@risserlabs.com",
-    "url": "risserlabs.com"
-  },
+  "author": "Risser Labs LLC <info@risserlabs.com> (risserlabs.com)",
   "contributors": [
-    {
-      "name": "Benjamin Kroeger",
-      "email": "bk@vegardit.com"
-    },
-    {
-      "name": "Brakebein",
-      "url": "https://github.com/chenxinhu"
-    },
-    {
-      "name": "Clay Risser",
-      "url": "https://github.com/clayrisser"
-    },
-    {
-      "name": "Risser Labs LLC",
-      "url": "https://gitlab.com/risserlabs"
-    }
+    "Benjamin Kroeger <bk@vegardit.com>",
+    "Brakebein (https://github.com/chenxinhu)",
+    "Clay Risser (https://github.com/clayrisser)",
+    "Risser Labs LLC (https://gitlab.com/risserlabs)"
   ],
   "main": "dist/index.js",
   "keywords": [
@@ -51,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/risserlabs/nestjs/prisma-generator-nestjs-dto"
+    "url": "git+https://gitlab.com/risserlabs/nestjs/prisma-generator-nestjs-dto.git"
   },
   "bin": {
     "prisma-generator-nestjs-dto": "dist/cli.js"
@@ -87,6 +71,12 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "^4.4.3"
-  }
+  },
+  "types": "./dist/index.d.ts",
+  "bugs": {
+    "url": "https://github.com/witstep/prisma-generator-nestjs-dto/issues"
+  },
+  "homepage": "https://github.com/witstep/prisma-generator-nestjs-dto#readme"
 }
