--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "description": "Generates DTO and Entity classes from Prisma Schema for NestJS",
   "version": "1.1.3",
   "license": "Apache-2.0",
-  "author": "Risser Labs LLC <info@risserlabs.com> (risserlabs.com)",
+  "author": "WitStep <info@witstep.com> (witstep.com)",
   "contributors": [
     "Benjamin Kroeger <bk@vegardit.com>",
     "Brakebein (https://github.com/chenxinhu)",
     "Clay Risser (https://github.com/clayrisser)",
-    "Risser Labs LLC (https://gitlab.com/risserlabs)"
+    "Risser Labs LLC (https://gitlab.com/risserlabs)",
+    "WitStep (https://github.com/witstep)"
   ],
   "main": "dist/index.js",
   "keywords": [
@@ -35,7 +36,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/risserlabs/nestjs/prisma-generator-nestjs-dto.git"
+    "url": "git+https://github.com/witstep/prisma-generator-nestjs-dto"
   },
   "bin": {
     "prisma-generator-nestjs-dto": "dist/cli.js"
